--- a/app/src/main/res/values-ne-rNP/strings.xml
+++ b/app/src/main/res/values-ne-rNP/strings.xml
@@ -34,4 +34,5 @@
   <string name="error_redirectLoop_title">पृष्ठ राम्रोसँग पुनः निर्देशित हुन सकिरहेको छैन</string>
   <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">&#160;<li>&#2351;&#2379; &#2360;&#2350;&#2360;&#2381;&#2351;&#2366; &#2325;&#2361;&#2367;&#2354;&#2375; &#2325;&#2361;&#2367;&#2305; &#2313;&#2340;&#2381;&#2346;&#2344;&#2381;&#2344; &#2361;&#2369;&#2344;&#2369;&#2325;&#2379; &#2325;&#2366;&#2352;&#2339; &#2325;&#2369;&#2325;&#2367;&#2332; &#2309;&#2325;&#2381;&#2359;&#2350; &#2327;&#2366;&#2352;&#2367;&#2319;&#2325;&#2379; &#2357;&#2366; &#2360;&#2381;&#2357;&#2368;&#2325;&#2366;&#2352;&#2381;&#2344; &#2344;&#2360;&#2325;&#2367;&#2319;&#2325;&#2379;&#2354;&#2375; &#2327;&#2352;&#2381;&#2342;&#2366; &#2361;&#2369;&#2344;&#2375; &#2327;&#2352;&#2381;&#2342;&#2331;&#2404;</li>&#160;</ul>]]></string>
   <string name="error_generic_title">ओहो</string>
+  <string name="your_rights">तपाईँका अधिकारहरु</string>
 </resources>
