--- a/app/src/main/res/values-zam/strings.xml
+++ b/app/src/main/res/values-zam/strings.xml
@@ -17,4 +17,5 @@
   <string name="error_hostLookup_title">Ngyé-n yìb rè</string>
   <string name="error_malformedURI_title">Ngyé-n nêt (n̆eza) ré</string>
   <string name="error_generic_title">Oops</string>
+  <string name="your_rights">Ko nákin niél</string>
 </resources>
