--- a/app/src/main/res/values-dsb/strings.xml
+++ b/app/src/main/res/values-dsb/strings.xml
@@ -48,6 +48,7 @@
   <string name="error_sslhandshake_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>To by m&#243;g&#322;o problem z konfiguraciju serwera by&#347;, abo by m&#243;g&#322;o by&#347;,\na&#382; n&#283;chten wopytujo serwer imit&#283;rowa&#347;.</li>"\n  "<li>Jolic s&#263;o by&#322; ze serwerom w zachadnos&#263;i wusp&#283;&#353;nje zw&#283;zany, by m&#243;g&#322;a zm&#243;lka sna&#378;\nnachylna by&#347; a m&#243;&#382;o&#347;o p&#243;zd&#378;ej hy&#353;&#263;i raz wopyta&#347;.</li>\n</ul>]]></string>
   <string name="error_generic_title">Hopla</string>
   <string name="error_generic_message">Z někakeje pśicyny njamóžomy toś ten bok zacytaś.</string>
+  <string name="your_rights">Waše pšawa</string>
     <string name="your_rights_content1">%1$s jo dermotna software wótwórjonego žrědła wót Mozilla a drugich sobustatkujucych.</string>
   <string name="your_rights_content2"><![CDATA["%1$s so pód wuměnjenjami licence "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Mozilla Public License</a>" a drugimi licencami wótwórjonego žrědła k dispoziciji staja."]]></string>
   <string name="your_rights_content3"><![CDATA["Njedaju wam žedne pšawa abo licence na wikowych markow załožby Mozilla Foundation abo tśeśich, inkluziwnje mjenja abo loga Mozilla, Firefox abo %1$s. Dalšne informacije namakajośo "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">how</a>.]]></string>
