--- a/app/src/main/res/values-nn-rNO/strings.xml
+++ b/app/src/main/res/values-nn-rNO/strings.xml
@@ -48,6 +48,7 @@
   <string name="error_sslhandshake_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>Dette kan vere p&#229; grunn av eit problem med serverkonfigurasjonen, eller det kan vere fordi nokon pr&#248;ver &#229; forfalske tilkoplinga til serveren.</li>"\n  "<li>Dersom du har klart &#229; kople til serveren tidlegare, kan problemet vere mellombels og du kan pr&#248;ve igjen seinare.</li>\n</ul>]]></string>
   <string name="error_generic_title">Ops</string>
   <string name="error_generic_message">Vi kan ikkje laste inn denne sida av ulike grunnar.</string>
+  <string name="your_rights">Dine rettar</string>
     <string name="your_rights_content1">%1$s er fri og open kjeldekode-programvare laga av Mozilla og andre bidragsytarar.</string>
   <string name="your_rights_content2"><![CDATA["%1$s er gjort tilgjengeleg for deg under vilkåra i "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Mozilla Public License</a>" og andre lisensar for open kjeldekode."]]></string>
   <string name="your_rights_content3"><![CDATA["Du får ingen rettar eller lisensar til varemerka som høyrer til Mozilla Foundation eller nokon part, inkludert Mozilla, Firefox eller %1$s namn eller logoar. Ytterlegare informasjon finn du "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">her</a>.]]></string>
