--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,6 @@ be temporary, and you can try again later.</li>
     <string name="pin_label">Pin to homescreen</string>
     <string name="notification_pinned_site">Pinned to Firefox TV homescreen</string>
     <string name="notification_unpinned_site">Removed from Firefox TV homescreen</string>
+
+    <string name="pocket_video_feed_recommended_videos_title">Recommended videos</string>
 </resources>
